--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,23 @@ Author: c(person("Aimin", "Xie", role = c("aut", "cre"), email = "aiminyy1993@gm
 Maintainer: Aimin Xie <aiminyy1993@gmail.com>
 Depends: R (>= 4.0.5)
 Description: scPAS is a novel approach that utilizes the bulk phenotypes, such as disease stage, tumor metastasis, treatment response, and survival outcomes, to identify the most highly phenotype-associated cell subpopulations from single-cell data.
-Imports: Rcpp, Matrix, Seurat, preprocessCore, survival
+Imports: 
+    Matrix,
+    Seurat,
+    data.table,
+    stats,
+    methods,
+    rlang,
+    SeuratObject,
+    SigBridgeRUtils,
+    cli,
+    purrr
 LinkingTo: Rcpp, RcppEigen
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.3
+Suggests: 
+    ALRA,
+    matrixStats,
+    preprocessCore
