fis installation bug

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,8 @@ Imports:
     SigBridgeRUtils,
     cli,
     purrr
+Remotes:
+    github: "WangLabCSU/SigBridgeRUtils"
 LinkingTo: Rcpp, RcppEigen
 License: GPL (>= 2)
 Encoding: UTF-8
